@@ -2,6 +2,8 @@ Revision history for Perl extension AnyEvent.
 
 	- reduce memory usage and slightly speed up the pure perl backend
           by only storing the file descriptor, not the file handle.
+        - add missing autocork method to AnyEvent::Handle (reported
+          by Adam Rosenstein).
 
 4.32 Mon Nov  3 22:46:32 CET 2008
 	- fix AnyEvent::Socket::resolve_sockaddr to properly support
